Реализованы слой для CRUD операций, написан Unit Test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=TripReminder
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/alertdb
+spring.datasource.username=nijens0
+spring.datasource.password=ieD528x06a6f#
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
