изменил немного orm (убрал некоторые поля, и теперь 1 reminder на 1 trip) , переписал DTO, исправил роутинг в сервисах, устранил дыру в безопасности, теперь методы show, update,delete проверяют принадлежность reminder к определенному trip, переписал TripMapper.  Дописал UserService, TripService, ReminderService, починил контроллеры, устранил ошибки, проект теперь запускается и готов к интеграции

--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     implementation 'org.locationtech.jts:jts-core:1.19.0'
     implementation 'org.hibernate.orm:hibernate-spatial:6.6.33.Final'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
+    implementation 'net.javacrumbs.json-unit:json-unit-assertj:3.4.1'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-    implementation 'net.javacrumbs.json-unit:json-unit-assertj:5.0.0'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    kapt 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     //developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
