--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,12 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'net.javacrumbs.json-unit:json-unit-assertj:3.4.1'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    implementation 'org.n52.jackson:jackson-datatype-jts:1.2.10'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     kapt 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     //developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testImplementation 'net.datafaker:datafaker:2.5.3'
