--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+
+rsa.private-key=classpath:rsakeys/private.pem
+rsa.public-key=classpath:rsakeys/public.pem
