--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 rsa.private-key=classpath:rsakeys/private.pem
 rsa.public-key=classpath:rsakeys/public.pem
+
+osrm.base-url=http://router.project-osrm.org
